no text wrap in sponser titles

--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1960,6 +1960,10 @@ main {
         }
       }
 
+      .spns_txt {
+        white-space: nowrap;
+      }
+
       .spns_item {
         width: 40.5%;
         margin: 0 24px;
