--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1082,25 +1082,6 @@ main {
     bottom: 12px;
   }
 
-  &:hover {
-    & .notice_cont {
-      width: 425px;
-      opacity: 1;
-      visibility: visible;
-      @include mq (medium,max) {
-        width: 300px;
-      }
-    }
-    & .notice_txt {
-      opacity: 1;
-      visibility: visible;
-    }
-    & .notice_i {
-      background-color: #b8c9fd;
-      transform: scale(1.08) rotate(-8deg);
-    }
-  }
-
   &_i {
     position: absolute;
     bottom: 0;
@@ -1113,12 +1094,12 @@ main {
     font-weight: 700;
     line-height: 38px;
     text-align: center;
-    background: $light_blue;
     border: 1px solid #3e4890;
     border-radius: 50%;
     cursor: pointer;
     z-index: 1;
-    transition: all .15s ease-in;
+    background-color: #b8c9fd;
+    transform: scale(1.08) rotate(-8deg);
     @include mq (medium,max) {
       width: 30px;
       height: 30px;
@@ -1127,8 +1108,6 @@ main {
   }
 
   &_cont {
-    opacity: 0;
-    visibility: hidden;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -1138,15 +1117,14 @@ main {
     border-radius: 20px;
     background: white;
     transition: all .1s ease-in;
+    width: 425px;
     @include mq (medium,max) {
-      width: 78%;
+      width: 300px;
       height: 32px;
     }
   }
 
   &_txt {
-    opacity: 0;
-    visibility: hidden;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -1154,8 +1132,9 @@ main {
     padding: 0 8px 0 0;
     font-size: 1.35rem;
     line-height: 40px;
-    letter-spacing: .05em;
+    letter-spacing: .03em;
     transition: all .2s ease;
+    white-space: nowrap;
     @include mq (medium,max) {
       padding-right: 0;
       width: 270px;
