募集中を選考中に変更

--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1993,7 +1993,7 @@ main {
       overflow: hidden;
 
       &::before {
-        content: 'スポンサー募集中';
+        content: 'スポンサー選考中';
         @include center (both);
         color: $red;
         text-align: center;
