--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -1815,6 +1815,13 @@ main {
             font-size: 1.2rem;
             font-weight: 700;
             letter-spacing: .05em;
+            a {
+              display: inline-block;
+              color: #111111;
+              font-size: 1.2rem;
+              font-weight: 700;
+              letter-spacing: .05em;
+            }
             @include mq (medium,max) {
               padding-top: 4px;
               box-sizing: border-box;
