--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -2102,6 +2102,9 @@ main {
       @include mq (medium,max) {
         width: 86%;
       }
+      &._shrink {
+        transform: translateY(-50%) scale(0.6);
+      }
     }
   }
 
