--- a/assets/css/kaigi01.scss
+++ b/assets/css/kaigi01.scss
@@ -2106,11 +2106,14 @@ main {
       left: 0;
       right: 0;
       margin: 0 auto;
-      @include mq (medium,max) {
-        width: 86%;
-      }
       &._shrink {
         transform: translateY(-50%) scale(0.6);
+      }
+      @include mq (medium,max) {
+        width: 86%;
+        &._shrink {
+          transform: translateY(-50%) scale(0.5);
+        }
       }
     }
   }
